syntax = "proto3";

package meow.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/VoidMesh/platform/api/proto/meow/v1";

service MeowService {
  rpc CreateMeow(CreateMeowRequest) returns (CreateMeowResponse) {}
  rpc GetMeow(GetMeowRequest) returns (GetMeowResponse) {}
  rpc IndexMeow(IndexMeowRequest) returns (IndexMeowResponse) {}
}

message Meow {
  string id = 1;
  string content = 2;
  google.protobuf.Timestamp created_at = 3;
}

message CreateMeowRequest {
  string content = 1;
}

message CreateMeowResponse {
  Meow meow = 1;
}

message GetMeowRequest {
  string id = 1;
}

message GetMeowResponse {
  Meow meow = 1;
}

message IndexMeowRequest {}

message IndexMeowResponse {
  repeated Meow meows = 1;
}
